dark mode and minor alignment fixes

--- a/assignment2/src/index.css
+++ b/assignment2/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont,'Roboto', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -21,7 +21,7 @@ body.light-mode {
 
 /* Dark mode styles */
 body.dark-mode {
-  background-color: rgb(18, 18, 18);
+  background-color: rgb(34, 34, 34);
   color: rgb(227, 227, 227);
 }
 
@@ -78,7 +78,7 @@ body.dark-mode {
 
 .pp1_c1{
   padding-top: 10px;
-  padding-left: 30px;
+  margin-left: 30px;
 }
 
 .s1{
@@ -94,7 +94,7 @@ body.dark-mode {
 }
 
 .we1_c1{
-  margin-left: 20px;
+  margin-left: 60px;
 }
 
 #Yellow-Line {
@@ -108,4 +108,18 @@ body.dark-mode {
   display: flex;
   align-items: flex-start;
   gap: 100px;
+}
+
+button {
+  background-color: #ff8800;
+  color: rgb(0, 0, 0);
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  
+}
+
+button:hover {
+  background-color: rgb(0, 0, 0);
+  color: #ff8800;
 }
